--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,5 +1,5 @@
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
+<% if flash.has?(:notice) %>
+  <%= flash[:notice] %>
 <% end %>
 
 <h2>Add New Song</h2>
