automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -9,7 +9,7 @@
 
   <label>Artist Name</label>
   <br><br>
-  <input type="text" name="artist" id="Artist Name">
+  <input type="text" name="artist" id="Artist Name" value="<%= @song.artist %>">
   <br><br>
 
   <label>Genres: </label>
