automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -19,5 +19,5 @@
   <% end %>
   <br><br>
 
-  <input type="submit" name="submit" value="Update">
+  <input type="submit" name="submit" value="Save">
 </form>
