--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,7 +1,7 @@
 <h2>Edit Song</h2>
 
 <form action="/songs/<%= @song.slug %>" method="post">
-  <input type="hidden" name="_method" value="patch">
+  <input type="hidden" name="_method" id="hidden" value="patch">
   <label>Name</label>
   <br><br>
   <input type="text" name="name" id="Name" value="<%= @song.name %>">
